# kenzie-q4-capstone

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
admin_users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
admin_users/migrations/: 0001_initial.py  0002_alter_trainer_cert.py  0002_alter_trainer_field_of_expertise.py  (+6 more)
all_messages/: admin.py  apps.py  forms.py  models.py  views.py
bananadog/: asgi.py  settings.py  urls.py  wsgi.py
dogs/: admin.py  forms.py  models.py  views.py
media_files/: admin.py  apps.py  forms.py  models.py  views.py
messages/: admin.py  views.py
notifications/: models.py  views.py
schedule/: views.py
static/: forms.css
templates/: admin_homepage.html  admin_navbar.html  all_clients_view.html  all_dogs.html  all_messages.html  all_reports.html  all_trainers.html  app_home.html  base.html  calendar.html  calender.html  client_detail.html  client_homepage.html  client_navbar.html  clientform.html  delete_dog_media.html  delete_media.html  delete_user_media.html  dog_profile_form.html  dog_profile_view.html  edit_profile_form.html  generic_err.html  login.html  message_form.html  my_sessions.html  notifications.html  report_detail.html  reports.html  session_add_dog_form.html  session_detail.html  session_edit.html  session_form.html  signup.html  trainer_detail.html  trainer_form.html  upload_dog_profile_pic.html  upload_profile_pic.html
training_sessions/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
users/: admin.py  forms.py  models.py  urls.py  views.py
(+45 files in other folders)
